--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
     <button onclick="numberGeneretion()" class="button">Sortear</button>
 
 </body>
-<script src="./script.js"></script>
+<script src="./scripts.js"></script>
 </html>
